<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dialog_img_margin_top"
    android:layout_marginRight="@dimen/dialog_img_margin_top"
    android:layout_marginBottom="@dimen/activity_margin_register"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_name"
                    android:lines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    android:textColorHint="@color/darkgray" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/text_country_code"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/darkgray" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_margin_register"
                    android:layout_marginRight="@dimen/activity_margin_register"
                    android:background="@color/calendar_day_text_color" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/text_phone"
                        android:inputType="number"
                        android:lines="1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark"
                        android:textColorHint="@color/darkgray" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/text_address"
                    android:lines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    android:textColorHint="@color/darkgray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/text_bottle_qty"
                    android:inputType="number"
                    android:lines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    android:textColorHint="@color/darkgray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/text_hot_bottle_qty"
                    android:inputType="number"
                    android:lines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    android:textColorHint="@color/darkgray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/text_amount"
                    android:inputType="number"
                    android:lines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    android:textColorHint="@color/darkgray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Select Date"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    android:textColorHint="@color/darkgray" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_left_margin"
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_marginRight="@dimen/general_left_margin"
                android:background="@color/white"
                android:paddingLeft="@dimen/general_left_margin"
                android:paddingTop="@dimen/activity_margin_register"
                android:paddingRight="@dimen/general_left_margin"
                android:paddingBottom="@dimen/activity_margin_register">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tpAddDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Select Time"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    android:textColorHint="@color/darkgray" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginTop="@dimen/general_left_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/theme_color"
                android:gravity="center"
                android:text="@string/btn_add"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
